--- a/08_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/08_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -91,9 +91,9 @@
                         <div class="co-info">
                             <div><a href="/"><img src="@commonInfo.Logo" alt="footer logo"></a></div>
                             <address>
-                                <div><em class="icon-location-arrow"></em> <span>@commonInfo.Address</span></div>
-                                <div> <em class="icon-mobile-phone"></em><span> @Anpero.StringHelpper.ToPhoneNumberFormat(commonInfo.HotLine)</span></div>
-                                <div> <em class="icon-envelope"></em><span>@commonInfo.Email</span></div>
+                                <div> <span><em class="icon-location-arrow"></em> @commonInfo.Address</span></div>
+                                <div> <span><em class="icon-mobile-phone"></em> @Anpero.StringHelpper.ToPhoneNumberFormat(commonInfo.HotLine)</span></div>
+                                <div> <span><em class="icon-envelope"></em> @commonInfo.Email</span></div>
                             </address>
                             <div class="social">
                                 <ul class="link">
@@ -165,17 +165,9 @@
                             }
                         </div>
                     </div>
-
-                    <!--col-sm-12 col-xs-12 col-lg-8-->
-                    <!--col-xs-12 col-lg-4-->
                 </div>
-                <!--row-->
             </div>
-
-            <!--container-->
         </div>
-        <!--footer-inner-->
-
         <div class="footer-middle">
             <div class="container">
                 <div class="row">
