--- a/04_Shop_multiProduct/Views/Home/Index.cshtml
+++ b/04_Shop_multiProduct/Views/Home/Index.cshtml
@@ -98,7 +98,7 @@
                                                                             <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
                                                                         </div>
                                                                         <div class="add-to-cart">
-                                                                            <a title="Add to Cart" href="javascript:Cart.addProduct3(@item.Id,'@Convert.ToInt32(item.SalePrice)','@item.Images','@item.PrName')">Đặt mua</a>
+                                                                            <a title="Add to Cart" href="javascript:Cart.addProduct3(@item.Id,'@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price)','@item.Images','@item.PrName')">Đặt mua</a>
                                                                         </div>
                                                                         <div class="group-price">
                                                                             <span class="product-new">Mới</span>
@@ -118,7 +118,7 @@
                                                                             }
                                                                             else
                                                                             {
-                                                                                <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
+                                                                                <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
                                                                             }
                                                                         </div>
 
@@ -160,7 +160,7 @@
                                                                 <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
                                                             </div>
                                                             <div class="add-to-cart">
-                                                                <a title="Add to Cart" href="javascript:Cart.addProduct3(@item.Id,'@Convert.ToInt32(item.SalePrice)','@item.Images','@item.PrName')">Đặt mua</a>
+                                                                <a title="Add to Cart" href="javascript:Cart.addProduct3(@item.Id,'@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price)','@item.Images','@item.PrName')">Đặt mua</a>
                                                             </div>
                                                             <div class="group-price">
                                                                 <span class="product-new">Mới</span>
@@ -228,7 +228,7 @@
                                                                     <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
                                                                 </div>
                                                                 <div class="add-to-cart">
-                                                                    <a title="Add to Cart" href="javascript:Cart.addProduct3(@item.Id,'@Convert.ToInt32(item.SalePrice)','@item.Images','@item.PrName')">Đặt mua</a>
+                                                                    <a title="Add to Cart" href="javascript:Cart.addProduct3(@item.Id,'@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price)','@item.Images','@item.PrName')">Đặt mua</a>
                                                                 </div>
                                                                 <div class="group-price">
                                                                     <span class="product-new">Mới</span>
