--- a/05_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/05_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -164,7 +164,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="add_cart">                                                        
-                                                        <button class="button btn-cart" type="button" onclick="Cart.addProduct(@saleList[i].Id,'@saleList[i].Price','@saleList[i].Images','@saleList[i].PrName');"><span>Mua ngay</span></button>
+                                                        <button class="button btn-cart" type="button" onclick="Cart.addProduct(@saleList[i].Id,'@(saleList[i].IsSale?saleList[i].SalePrice:saleList[i].Price)','@saleList[i].Images','@saleList[i].PrName');"><span>Mua ngay</span></button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -252,7 +252,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="add_cart">
-                                                        <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
+                                                        <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,@item.IsSale?item.SalePrice:item.Price,'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
                                                     </div>
                                                 </div>
                                             </div>
