--- a/07_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/07_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -316,7 +316,7 @@
                                                                     <div class="price-box"><span class="regular-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </span> </div>
                                                                 </div>
                                                                 <div class="add_cart">
-                                                                    <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
+                                                                    <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price),'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
                                                                 </div>
                                                             </div>
                                                         </div>
