--- a/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
@@ -21,6 +21,7 @@
                         {
                             <a href="mailto:@commonInfo.Email"><span><i class="fa fa-envelope-o"></i></span>@commonInfo.Email</a>
                         }
+                        
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-5">
@@ -51,7 +52,8 @@
                             <span class="icon-bar"></span>
                         </button>
                         <div class="logo">
-                            <a href="/"><img alt="@commonInfo.Desc" src="@commonInfo.Logo" /></a>
+                            <li><a href="/#contact">Liên hệ</a></li>
+                            <a href="/#contact"><img alt="@commonInfo.Desc" src="@commonInfo.Logo" /></a>
                         </div>
                     </div>
                     <div class="collapse navbar-collapse bs-example-js-navbar-scrollspy">
@@ -90,7 +92,7 @@
                                     <li><a href="/huong-dan-su-dung-b115">Hướng dẫn</a></li>
                                     <li><a href="#images">Hình Ảnh</a></li>
                                     <li><a href="/thiet-ke-web-c167" title="thiết kế web">Thiết kế web</a></li>
-                                    <li><a href="#contact">Liên hệ</a></li>
+                                    
                                 }
                                 else
                                 {
@@ -100,7 +102,7 @@
                                     <li><a href="/blog">Hướng dẫn</a></li>
                                     <li><a href="/#images">Hình Ảnh</a></li>
                                     <li><a href="/thiet-ke-web-c167" title="thiết kế web">Thiết kế web</a></li>
-                                    <li><a href="/#contact">Liên hệ</a></li>
+                                   
                                 }
                             @*}*@
                         </ul>
