--- a/08_Shop_MultiProduct/assets/stylesheet/style.css
+++ b/08_Shop_MultiProduct/assets/stylesheet/style.css
@@ -4333,7 +4333,7 @@ ul.pdt-list li.item a img.image-hover {
             font-family: 'Montserrat', sans-serif;
             letter-spacing: 0.5px;
             text-transform: uppercase;
-            background: #ed6663;
+            background: #88be4c;
             margin-top: 0px;
             min-width: 250px;
         }
