--- a/08_Shop_MultiProduct/Views/Home/Contact.cshtml
+++ b/08_Shop_MultiProduct/Views/Home/Contact.cshtml
@@ -6,7 +6,7 @@
     {
         commonInfo = (AnperoFrontend.WebService.Webconfig)ViewData["commonInfo"];
         ViewBag.WebsiteUrl = HttpContext.Current.Request.Url.AbsoluteUri;
-        ViewBag.Keywords = Anpero.StringHelpper.UnicodeToKoDau("thực phẩm sạch, hoa qua sạch, rau sạch, ngon lành, ngon sạch, trái cây sạch, bơ sáp, bơ booth, bưởi diễn, bưởi danh xanh, bưởi quế dương,mật ong");
+        ViewBag.Keywords = Anpero.StringHelpper.UnicodeToKoDau("Liên hệ |" + commonInfo.Name+" | "+ commonInfo.Desc);
     }
 }
 @section health{
@@ -29,14 +29,14 @@
         </div>
     </div>
 </div>
-<div class="columns-container">
-    <div class="container" id="columns">
+<div class="main-container  col2-right-layout">
+    <div class="main  container" id="columns">
         <!-- /assets/page heading-->
         <div id="contact" class="page-content page-contact">
             <div id="message-box-conact"></div>
-            <div class="row">
+            <div class="row blog-wrapper">
                 <div class="col-sm-6">
-                    <h3 class="page-subheading">Gửi tin nhắn cho Ngon&Lành</h3>
+                    <h3 class="page-subheading">Gửi tin nhắn cho @commonInfo.Name</h3>
                     <div class="contact-form-box">                       
                         <div class="form-selector">
                             <label>Tên liên hệ </label>
@@ -62,35 +62,44 @@
                             <div id="g-recaptcha"></div>
                         </div>
                         <div class="form-selector">
-                            <button id="btn-send-contact" class="btn">Gửi  </button>
+                            <button id="btn-send-contact" class="btn">Gửi tin nhắn </button>
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6" id="contact_form_map">
                     <h3 class="page-subheading">Thông tin liên hệ @commonInfo.Name</h3>
-                    <p>@commonInfo.Desc</p>
+                    <div>@commonInfo.Desc</div>
                     <br />
                     
                     <br />
-                    <ul class="store_info">
-                        <li><i class="fa fa-home"></i>@commonInfo.Address</li>
-                        @if (!string.IsNullOrEmpty(commonInfo.HotLine))
-                        {
-                            <li><i class="fa fa-phone"></i><span><a href="tell:@commonInfo.HotLine">@commonInfo.HotLine</a></span></li>
-                        }
-                        @if (!string.IsNullOrEmpty(commonInfo.Skype))
-                        {
-                            <li><i class="fa fa-skype"></i><span> <a href="skype:@commonInfo.Skype"></a>@commonInfo.Skype</span></li>
-                        }
-                        @if (!string.IsNullOrEmpty(commonInfo.Email))
-                        {
-                            <li><i class="fa fa-envelope"></i><span><a href="mailto:@commonInfo.Email">@commonInfo.Email</a></span></li>
-                        }
-                        @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
-                        {
-                            <li><i class="fa fa-facebook"></i><span><a href="@commonInfo.FaceBookLink">@commonInfo.FaceBookLink</a></span></li>
-                        }
-                    </ul>
+                    <div class="co-info">
+                        
+                        <address>
+                            @if (!string.IsNullOrEmpty(commonInfo.Address))
+                            {
+                                <div> <span><em class="icon-location-arrow"></em> @commonInfo.Address</span></div>
+                            }
+                            @if (!string.IsNullOrEmpty(commonInfo.HotLine))
+                            {
+                                <div> <span><em class="icon-mobile-phone"></em> @commonInfo.HotLine</span></div>
+                            }
+                            @if (!string.IsNullOrEmpty(commonInfo.Email))
+                            {
+                                <div> <span><em class="icon-envelope"></em> @commonInfo.Email</span></div>
+                            }
+                            @if (!string.IsNullOrEmpty(commonInfo.Skype))
+                            {
+                                <div> <span><em class="fa fa-skype"></em> @commonInfo.Skype</span></div>
+                            }
+                            @if (!string.IsNullOrEmpty(commonInfo.Skype))
+                            {
+                                <div> <span><em class="fa fa-facebook"></em><a href="@commonInfo.FaceBookLink">@commonInfo.FaceBookLink</a></span></div>
+                            }
+                            
+                            
+                        </address>
+                        
+                    </div>
                 </div>
             </div>
             <div id='ajax_loader' style="position: fixed; left: 45%; top: 50%; display: none;">
