--- a/08_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/08_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -103,17 +103,8 @@
             <div class="new_title">
                 <h2>Sản phẩm bán chạy</h2>
             </div>
-            <div class="cate-banner-img">
-                @if (ViewData["AdsSlide2"] != null)
-                {
-                    Ads[] slide = (Ads[])ViewData["AdsSlide2"];
-                    if (slide.Length > 0)
-                    {
-                        <img src="@slide[0].ImagesUrl" alt="@slide[0].Description" />
-                    }
-                }
-            </div>
-            <div id="best-seller" class="product-flexslider hidden-buttons">
+       
+            <div class="product-flexslider hidden-buttons best-seller">
                 <div class="slider-items slider-width-col4 products-grid">
                     @if (ViewData["BestsaleProduct"] != null)
                     {
@@ -160,7 +151,20 @@
                                                     @if (item.Price > 0)
                                                     {
                                                         <div class="item-price">
-                                                            <div class="price-box"><span class="regular-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </span> </div>
+                                                            <div class="price-box">
+                                                            <span class="regular-price">
+                                                                @if (item.IsSale)
+                                                                {
+                                                                    <span class="old-price"> <span class="price"> @Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)</span></span>
+                                                                    <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span>
+                                                                }
+
+                                                           </span> 
+                                                         </div>
                                                         </div>
                                                         <div class="add_cart">
                                                             <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price),'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
@@ -177,8 +181,102 @@
                     }
                 </div>
             </div>
+           
         </div>
-    </section>
+        <div class="best-pro slider-items-products container">
+            <div class="new_title">
+                <h2>Đang khuyến mãi</h2>
+            </div>
+            <div class="product-flexslider hidden-buttons best-seller">
+                <div class="slider-items slider-width-col4 products-grid">
+                    @if (ViewData["saleProduct"] != null)
+                    {
+                        ProductItem[] bestSaleList = (ProductItem[])ViewData["saleProduct"];
+                        if (bestSaleList != null && bestSaleList.Length > 0)
+                        {
+                            foreach (ProductItem item in bestSaleList)
+                            {
+                                <div class="item">
+                                    <div class="item-inner">
+                                        <div class="item-img">
+                                            <div class="item-img-info">
+                                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="product-image">
+                                                    <img src="@item.Images" alt="@item.PrName">
+                                                </a>
+                                                <div class="new-label new-top-left">New</div>
+                                                <div class="item-box-hover">
+                                                    <div class="box-inner">
+                                                        <div class="product-detail-bnt">
+                                                            <a class="button detail-bnt" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
+                                                                <span>Chi tiết</span>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="item-info">
+                                            <div class="info-inner">
+                                                <div class="item-title">
+                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
+                                                        @item.PrName
+                                                    </a>
+                                                </div>
+                                                <div class="item-content">
+                                                    <div class="rating">
+                                                        <div class="ratings">
+                                                            <div class="rating-box">
+                                                                <div class="rating" style="width:80%"></div>
+                                                            </div>
+                                                            <p class="rating-links"><a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
+                                                        </div>
+                                                    </div>
+                                                    @if (item.Price > 0)
+                                                    {
+                                                        <div class="item-price">
+                                                            <div class="price-box">
+                                                                <span class="regular-price">
+                                                                    @if (item.IsSale)
+                                                                    {
+                                                                        <span class="old-price"><span class="price"> @Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)</span></span>
+                                                                        <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span>
+                                                                    }
+                                                                    else
+                                                                    {
+                                                                        <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span>
+                                                                    }
+
+                                                                </span>
+                                                            </div>
+                                                        </div>
+                                                        <div class="add_cart">
+                                                            <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price),'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
+                                                        </div>
+                                                    }
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+                        }
+                    }
+                </div>
+            </div>
+            </div>
+            <div class="cate-banner-img slide2">
+                @if (ViewData["AdsSlide2"] != null)
+            {
+                Ads[] slide = (Ads[])ViewData["AdsSlide2"];
+                if (slide.Length > 0)
+                {
+                        <img src="@slide[0].ImagesUrl" alt="@slide[0].Description" />
+                    }
+                }
+            </div>
+
+</section>
     @if (ViewData["FeatureArticle"] != null)
     {
         SearchArticleResults FeatureArticle = (SearchArticleResults)ViewData["FeatureArticle"];
