--- a/08_Shop_MultiProduct/Views/Product/Index.cshtml
+++ b/08_Shop_MultiProduct/Views/Product/Index.cshtml
@@ -15,8 +15,8 @@
         <link rel="stylesheet" type="text/css" href="~/assets/stylesheet/flexslider.css">
         <meta property="og:description" content="@item.ShortDesc" />
         <meta property="og:title" content="@item.PrName" />
-        <meta property="og:type" content="website" />      
-        <meta property="og:url" content="@ViewBag.WebsiteUrl" />  
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="@ViewBag.WebsiteUrl" />
         <meta property="og:image" content="@item.Images" />
         <link rel="stylesheet" type="text/css" href="~/assets/stylesheet/flexslider.css">
     }
@@ -48,15 +48,17 @@
                     <div class="product-view wow bounceInUp animated" itemscope="" itemtype="http://schema.org/Product" itemid="#product_base">
                         <div id="messages_product_view"></div>
                         <div class="product-essential container">
-                            <div class="row">                                
+                            <div class="row">
                                 <form action="" method="post" id="product_addtocart_form">
                                     <div class="product-img-box col-sm-6 col-xs-12">
                                         <div class="new-label new-top-left"> New </div>
                                         <div class="product-image">
-                                            <div class="large-image"> <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.CatName, item.CatID)" class="cloud-zoom" id="zoom1" rel="useWrapper: false, adjustY:0, adjustX:20"> <img src="@item.Images"> </a> </div>
-                                            <div class="flexslider flexslider-thumb">
-                                                @if (item.ImagesSlide != null && item.ImagesSlide.Length > 0)
-                                                {
+
+
+                                            @if (item.ImagesSlide != null && item.ImagesSlide.Length > 0)
+                                            {
+                                                <div class="large-image"> <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.CatName, item.CatID)" class="cloud-zoom" id="zoom1" rel="useWrapper: false, adjustY:0, adjustX:20"> <img src="@item.ImagesSlide[0]" alt="@item.PrName"> </a> </div>
+                                                <div class="flexslider flexslider-thumb">
                                                     <ul class="previews-list slides">
                                                         @foreach (var images in item.ImagesSlide)
                                                         {
@@ -67,8 +69,13 @@
                                                             </li>
                                                         }
                                                     </ul>
-                                                }
-                                            </div>
+                                                </div>
+                                            }
+                                            else
+                                            {
+                                                <div class="large-image"> <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.CatName, item.CatID)" class="cloud-zoom" id="zoom1" rel="useWrapper: false, adjustY:0, adjustX:20"> <img src="@item.Images" alt="@item.PrName"> </a> </div>
+                                            }
+
                                         </div>
                                     </div>
                                     <div class="product-shop col-sm-6 col-xs-12">
@@ -77,18 +84,18 @@
                                         </div>
                                         <span itemprop="aggregateRating" itemscope="" itemtype="http://schema.org/AggregateRating">
                                             <div class="rating">
-                                                <div class="ratings">                                                   
+                                                <div class="ratings">
                                                     <p class="rating-links"><a href="tel:@commonInfo.HotLine">Gọi: @commonInfo.HotLine hoặc click mua ngay để đặt hàng</a> </p>
                                                 </div>
                                             </div>
                                         </span>
                                         <div class="price-block">
-                                            <div class="price-box"> 
-                                            @if (item.IsSale)
-                                            {                                                
-                                                <span class="old-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)</span> </span>
-                                             }
-                                                <span class="regular-price"><span class="price">@((item.IsSale ? item.SalePrice : item.Price) > 0 ? Anpero.StringHelpper.ConVertToMoneyFormatInt(item.IsSale ? item.SalePrice : item.Price) + " đ" : "Liên hệ")</span> </span> 
+                                            <div class="price-box">
+                                                @if (item.IsSale)
+                                                {
+                                                    <span class="old-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)</span> </span>
+                                                }
+                                                <span class="regular-price"><span class="price">@((item.IsSale ? item.SalePrice : item.Price) > 0 ? Anpero.StringHelpper.ConVertToMoneyFormatInt(item.IsSale ? item.SalePrice : item.Price) + " đ" : "Liên hệ")</span> </span>
                                             </div>
                                             @if (@item.IsInstock)
                                             {
@@ -111,27 +118,27 @@
                                                 <p>@Html.Raw(item.ShortDesc)</p>
                                             </div>
                                         }
-                                       
+
                                         <div class="add-to-box">
                                             <div class="add-to-cart">
                                                 <div class="pull-left">
                                                     <div class="custom pull-left">
                                                         <button onclick="var result = document.getElementById('qty'); var qty = result.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 0 ) result.value--;return false;" class="reduced items-count" type="button"><i class="icon-minus">&nbsp;</i></button>
                                                         <input type="text" name="qty" id="qty" maxlength="12" value="1" title="Quantity:" class="input-text qty">
-                                                        <button onclick="var result = document.getElementById('qty'); var qty = result.value; if( !isNaN( qty )) result.value++;return false;" class="increase items-count" type="button"><i class="icon-plus">&nbsp;</i></button>                                                        
+                                                        <button onclick="var result = document.getElementById('qty'); var qty = result.value; if( !isNaN( qty )) result.value++;return false;" class="increase items-count" type="button"><i class="icon-plus">&nbsp;</i></button>
                                                     </div>
                                                 </div>
                                                 <button type="button" title="Add to Cart" class="button btn-cart" onclick="Cart.addProduct(@item.Id,@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price),'@item.Images','@item.PrName');"><span><i class="icon-basket"></i>Mua ngay</span></button>
                                             </div>
-                                            <div class="email-addto-box">                                                
-                                                <p class="add-to-links"><a class="link-wishlist" href="http://www.facebook.com/share.php?u=@thisUrl&title=@commonInfo.Desc" onclick="" title="Add To Wishlist"><span>Add To Wishlist</span></a></p>                                               
+                                            <div class="email-addto-box">
+                                                <p class="add-to-links"><a class="link-wishlist" href="http://www.facebook.com/share.php?u=@thisUrl&title=@commonInfo.Desc" onclick="" title="Add To Wishlist"><span>Add To Wishlist</span></a></p>
                                             </div>
                                         </div>
                                         <div class="social">
                                             <ul class="link">
                                                 @if (!string.IsNullOrEmpty(commonInfo.Skype) || !string.IsNullOrEmpty(commonInfo.FaceBookLink))
                                                 {
-                                                 
+
 
                                                     if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                                                     {
