--- a/05_Shop_MultiProduct/Views/Shared/_partial/_HomeSlide_1.cshtml
+++ b/05_Shop_MultiProduct/Views/Shared/_partial/_HomeSlide_1.cshtml
@@ -10,10 +10,9 @@
                         if (slide.Length > 0)
                         {
                             foreach (var item in slide)
-                            {
-                            
+                            {                            
                                 <li data-transition='random' data-slotamount='7' data-masterspeed='1000' data-thumb='@item.ImagesUrl'>
-                                    <img src='@item.ImagesUrl' data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat' alt="slider-image1" />
+                                    <img src='@item.ImagesUrl' data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat'/>
                                     <div class="info">
                                         @Html.Raw(item.Description)                                        
                                     </div>
