--- a/08_Shop_MultiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/08_Shop_MultiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -10,7 +10,8 @@
     <div class="header-banner">
         <div class="assetBlock">
             <div style="height: 20px; overflow: hidden;" id="slideshow">
-                <p style="display: block;">HOT DAYS! - <span>5%</span> KHÁCH ĐẶT HÀNG ONLINE! &gt;</p><p style="display: none;">GIẢM GIÁ LÊN ĐẾN <span>15%</span> CHO ĐƠN ĐẶT HÀNG từ 3 TRIỆU! &gt;</p>
+                <p style="display: block;">Gọi <a href="tel:@commonInfo.HotLine" style="margin:0 5px 0 5px;"><span>@commonInfo.HotLine</span></a> để đặt hàng online tại @commonInfo.Name</p>
+                <p style="display: none;">@commonInfo.Desc - @commonInfo.Name </p>
             </div>
         </div>
     </div>
