--- a/08_Shop_MultiProduct/Views/Article/Index.cshtml
+++ b/08_Shop_MultiProduct/Views/Article/Index.cshtml
@@ -68,7 +68,7 @@
                                     <div class="new_title center">
                                         <h2>Bài liên quan</h2>
                                     </div>
-                                    <div id="related-slider" class="product-flexslider hidden-buttons">
+                                    <div id="related-slider" class="product-flexslider hidden-buttons related-posts">
                                         <div class="slider-items slider-width-col4 products-grid">
                                             @foreach (var articleItem in articleList.ItemList)
                                             {
