--- a/08_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/08_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -10,8 +10,11 @@
       xmlns:fb="http://ogp.me/ns/fb#">
 <head>
     <title>@ViewBag.Title</title>
+    <meta property="og:title" content="@Html.Raw(ViewBag.Title)" />
+    <meta property="og:locale" content="vi_VN" />
     @RenderSection("health", required: false)
     @Styles.Render("~/Content/css")
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="Refresh" content="3600" />
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no">
